--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 data Plugin for DokuWiki
 
 All documentation for this plugin can be found at
-http://www.dokuwiki.org/plugin:data-graph
+http://www.dokuwiki.org/plugin:datagraph
 
 If you install this plugin manually, make sure it is installed in
-lib/plugins/data-graph/ - if the folder is called different it
+lib/plugins/datagraph/ - if the folder is called different it
 will not work!
 
 Please refer to http://www.dokuwiki.org/plugins for additional info
